--- a/Frontend1.html
+++ b/Frontend1.html
@@ -3,12 +3,27 @@
 <head>
     <style>
     body {
-        background-color: lightblue;
+        background-color: black;
     }
-    </style>   
+    </style>  
     <title>UFC Fighter</title>
 </head>
 <body>
+    <style>
+        @font-face {
+            font-family: myFirstFont;
+            src: url(BBHSansBartle-Regular.ttf);
+        }
+        h1 {
+            color: white;
+            text-align: center;
+            font-family: myFirstFont;
+            font-size: 90px;
+        }
+    </style>
+    <h1>
+        UFC Fighter
+    </h1>
     <p>qowijdioqjw</p>
 </body>
 </html>
