--- a/Frontend1.html
+++ b/Frontend1.html
@@ -7,22 +7,22 @@
     <title>UFC Fighter</title>
 </head>
 <body>
-    <div class="title" style="padding-top: 5%;">
+    <div class="title">
         UFC Fighter
     </div>
 
     <div class="subtext">
-        <p>By: Thomas Atlee and Oliver Barta</p>
+        <p>By: Thomas AtLee and Oliver Barta</p>
     </div>
-
 
     <div class="mainsearch">
         <input id="fightersearch" type="text" placeholder="Enter fighter name" />
         <button onclick="searchFighter()">-></button>
     </div>
+    <div class="suggestions" id="suggestions" style="display: flex;">Suggestions: None</div>
 
     <div id="result" class="result" style="display: none;">
-
+        
     </div>
 
 
