--- a/Frontend1.html
+++ b/Frontend1.html
@@ -16,10 +16,10 @@
     </div>
 
     <div class="mainsearch">
-        <input id="fightersearch" type="text" placeholder="Enter fighter name" />
+        <input id="fightersearch" type="text" placeholder="Enter fighter name" autocomplete="off"/>
         <button onclick="searchFighter()">-></button>
     </div>
-    <div class="suggestions" id="suggestions" style="display: flex;">Suggestions: None</div>
+    <div class="suggestions" id="suggestions" style="display: none;"></div>
 
     <div id="result" class="result" style="display: none;">
         
