--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content ="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>UFC Fighter</title>
-    <link rel="icon" type="image/site-icon" href="/images/conor-mcgregor.jpeg">
+    <link rel="icon" href="/images/conor-mcgregor.jpeg">
 </head>
 <body>
     <div class="title">
