--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@
     <div class="title">
         UFC Fighter
     </div>
-    <div class="buttonGrid" id="buttonGrid" style="display: flex;"></div>
-
     <div class="mainsearch">
-        <input id="fightersearch" type="text" placeholder="Enter fighter name or stat" autocomplete="off"/>
+        <input id="fightersearch" type="text" placeholder="Search by name or stat" autocomplete="off"/>
         <button onclick="searchFighterNoName()">-></button>
     </div>
+    <div class="subtext" id="subtext">Example: "Conor Mcgregor" or "Height"</div>
     <div class="suggestions" id="suggestions" style="display: none;"></div>
     
     <div id="arena" class="arena">
@@ -45,7 +44,7 @@
     
 
     <div id="emptybotbox" class="emptybot" style="display: flex;"></div><!-- empty invisible box. Purpose: stop jumping -->
-    <button id="backToTop" title="Back to top">↑ Top</button>
+    <button id="backToTop" title="Back to top">Top</button>
     <script src="scriptbackend.js"></script>
 
 
